--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,4 +3,124 @@
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    /*All transitions will have this delay*/
+    transition-duration: 300ms;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    background: #0F172A;
+    color: white;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+
+    /*Max width of 800px or 90vw if below*/
+    width: 90vw;
+    max-width: 800px;
+}
+
+form h1 {
+    font-weight: 800;
+    letter-spacing: 1.5px;
+    color: hsl(180, 100%, 80%);
+    text-shadow: 0 0 4px skyblue;
+    text-align: center;
+    user-select: none;
+    margin: 32px 0;
+}
+
+form > input,
+form label,
+form label input {
+    /*100% of parent which is the form*/
+    width: 100%;
+    background: transparent;
+    outline: none;
+    color: white;
+    padding: 6px 4px;
+    border: none;
+}
+
+form div {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 5px;
+    align-items: center;
+    justify-content: center;
+}
+
+form div div {
+    color: goldenrod;
+    width: fit-content;
+}
+
+form div div:hover {
+    transform: scale(1.3);
+    cursor: pointer;
+}
+
+form div input {
+    width: 100%;
+    background: cyan;
+    color: black;
+    border: none;
+    padding: 8px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin: 18px auto;
+    border-radius: 3px;
+}
+
+
+form div input:hover {
+    background: transparent;
+    color: cyan;
+}
+
+#question {
+    border: 1px solid transparent;
+    border-bottom: 1px solid aqua;
+    margin: 4px 0 12px 0;
+    font-size: 1.2rem;
+    padding: 14px 12px;
+}
+
+#question:focus {
+    border: 1px solid aqua;
+}
+
+#question:hover {
+    opacity: 0.8;
+}
+
+.options {
+    position: relative;
+    padding-left: 20px;
+    flex: 1;
+    color: white;
+
+    /*Setting this as transparent reserves a 1px border bottom so it does not jump in animation*/
+    border-bottom: 1px solid transparent;
+    padding: 6px 3px;
+}
+
+.options:hover {
+    border-bottom: 1px solid goldenrod;
+}
+
+form label {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
