--- a/public/styles/poll.css
+++ b/public/styles/poll.css
@@ -15,3 +15,52 @@ body {
     background: #0F172A;
     color: white;
 }
+
+main {
+    max-width: 800px;
+    /*self centering*/
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+#options {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 100%;
+}
+main > h1 {
+    font-weight: 800;
+    color: cyan;
+    text-shadow: 0 0 4px skyblue;
+    text-align: center;
+    user-select: none;
+    margin: 32px 0;
+    text-transform: uppercase;
+    border-bottom: 1px solid cyan;
+}
+
+ul li {
+    text-transform: capitalize;
+    list-style: none;
+    user-select: none;
+    cursor: pointer;
+    width: 100%;
+    border: 1px solid transparent;
+    padding: 8px;
+}
+
+ul li:hover {
+    color: goldenrod;
+    background-color: black;
+    border-left: 1px solid goldenrod;
+}
+
+ul li i {
+    padding: 0 6px 0 0;
+}
+
