--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,6 +17,8 @@ body {
 }
 
 form {
+    /*Adding a flex of 1 makes sure it takes up all the space that is empty */
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,13 +52,14 @@ form label input {
     border: none;
 }
 
-form div {
+form > div {
     display: flex;
     flex-direction: column;
+    flex: 1;
     width: 100%;
     gap: 5px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 form div div {
@@ -124,3 +127,4 @@ form label {
     align-items: center;
     gap: 10px;
 }
+
